#49 refactor multi home terraform

--- a/public/cod/error.html
+++ b/public/cod/error.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arcanum</title>
+    <title>Error</title>
 </head>
 <body>
-    <h1>How to get starting playing Arcanum<h1>
-    <img src="/assets/Arcanum_cover_copy.jpg" />
-    <img src="/assets/terra.png" />
+    <p>Error!</p>
 </body>
 </html>
